--- a/package.json
+++ b/package.json
@@ -1,30 +1,18 @@
 {
-  "name": "express-gen",
-  "version": "0.0.0",
-  "private": true,
-  "scripts": {
-    "start": "node ./bin/www",
-    "dev": "set PORT=8080 & SET DEBUG=express-gen:* & nodemon start"
-  },
-  "dependencies": {
-    "cookie-parser": "~1.4.4",
-    "debug": "~2.6.9",
-    "express": "~4.16.1",
-    "hbs": "^4.2.0",
-    "http-errors": "~1.6.3",
-    "morgan": "~1.9.1"
-  },
-  "description": "",
-  "main": "app.js",
-  "devDependencies": {},
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/6187144/express-gen-2022.git"
-  },
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/6187144/express-gen-2022/issues"
-  },
-  "homepage": "https://github.com/6187144/express-gen-2022#readme"
+    "name": "site-with-mariadb",
+    "version": "0.0.0",
+    "private": true,
+    "scripts": {
+        "start": "node ./bin/www",
+        "dev": "SET DEBUG=express-mariadb:* & nodemon start"
+    },
+    "dependencies": {
+        "cookie-parser": "~1.4.6",
+        "debug": "~4.3.3",
+        "express": "~4.17.3",
+        "hbs": "~4.2.0",
+        "http-errors": "~2.0.0",
+        "mariadb": "^3.0.0",
+        "morgan": "~1.10.0"
+    }
 }
